changed as requested

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -30,7 +30,7 @@
           <br /><br />
           <div class="content__listing">
             <ol class="content__list">
-              <li><a href="#"> A Scandal in Bohemia</a></li>
+              <li><a href="#">A Scandal in Bohemia</a></li>
               <li><a href="#">The Red-Headed League</a></li>
               <li><a href="#">A Case of Identity</a></li>
               <li><a href="#">The Boscombe Valley Mystery</a></li>
@@ -550,5 +550,41 @@
         </ol>
       </div>
     </div>
+  </body>
+</html> -->
+
+<!-- Seth's -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>assignment</title>
+  </head>
+  <body>
+    <center>
+      <h1>The Adventures  of<br> Sherlock Holmes</h1>
+      <h3>by Arthur Conan Doyle</h3>
+      <hr />
+      <br />
+      <h3>content</h3>
+      <br />
+      <ol>
+        <li><a href="#">chapter 1</a></li>
+        <li><a href="#">chapter 1</a></li>
+        <li><a href="#">chapter 1</a></li>
+        <li><a href="#">chapter 1</a></li>
+        <li><a href="#">chapter 1</a></li>
+        <li><a href="#">chapter 1</a></li>
+      </ol>
+      <ul><li><a href="#">chapter 2</li>
+      <li><a href="#">chapter 2</li>
+      <li><a href="#">chapter 2</li>
+      <li><a href="#">chapter 2</li>
+      <li><a href="#">chapter 2</li>
+      <li><a href="#">chapter 2</li></ul>
+    </center>
   </body>
 </html>
